fix: update padding/overflow on buttons - fixes #44 (#49)

--- a/src/components/Why/styles.module.css
+++ b/src/components/Why/styles.module.css
@@ -93,15 +93,14 @@
   }
 
   .why__menu--item {
-    min-width: 30%;
-    padding: 0 0.5rem;
-    flex: 0 1 auto;
-    font-size: var(--font-size-small);
+    padding: 0 0.25rem;
+    flex: 1;
+    font-size: calc(var(--font-size-small) - 1px);
   }
 
   .why__menu--item:not(:last-child) {
     margin: 0;
-    margin-right: 1rem;
+    margin-right: 0.25rem;
   }
 
   .why__menu--item:nth-child(2) {
